--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-resume",
   "version": "0.0.1",
-  "description": "My online Resume",
-  "productName": "MyResume",
+  "description": "Nigui handcrafted introduction website",
+  "productName": "Nigui's website",
   "author": "Guillaume Nicolas <guin56@gmail.com>",
   "private": true,
   "scripts": {
