--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
+    "@intlify/vue-i18n-loader": "^3.3.0",
     "@quasar/app": "^3.0.0",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "yaml-loader": "^0.6.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
